syntax = "proto3";

package user;

service UserService{
    rpc GetUserDetails (UserDto) returns (UserDetails);
}

message UserDto{
    string username = 1;
    string password = 2;
}
message UserInfo{
    int32 id = 1;
    int32 userId = 2;
    string name = 3;
    string email = 4;
    string dob = 5;
}

message UserDetails{
    int32 id = 1;
    string username = 2;
    string password = 3;
    UserInfo info = 4;
}